--- a/src/main/resources/application-old.properties
+++ b/src/main/resources/application-old.properties
@@ -4,10 +4,10 @@ server.port=6789
 #jdbc.url = jdbc:mysql://localhost:3306/jjb-test?zeroDateTimeBehavior=convertToNull&useUnicode=true&characterEncoding=utf-8
 #jdbc.username=root
 #jdbc.password=
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/jjb-test
-spring.datasource.username=root
-spring.datasource.password=
+ms.db.driverClassName=com.mysql.jdbc.Driver
+ms.db.url=jdbc:mysql://localhost:3306/jjb-test
+ms.db.username=root
+ms.db.password=
 
 age=${random.int(100)}
 user.address=china,shanghai
