--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,6 +6,19 @@ server:
 #  type-aliases-package: com.model
 
 spring:
+#  thymeleaf默认配置
+  thymeleaf:
+    prefix:
+      classpath:templates/
+    suffix:
+      .html
+    mode:
+      HTML5
+    encoding:
+      UTF-8
+    content-type:
+      text/html
+
   profiles:
       active: dev
 
