接口服务层

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port : 6789
+  port : 8088
 
 #mybatis:
 #  mapper-locations: classpath*:mapper/*.xml
@@ -34,7 +34,33 @@ spring:
 ms:
   db:
     driverClassName: com.mysql.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/jjb-test?useUnicode=true&characterEncoding=UTF-8&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&useSSL=false
+    url: jdbc:mysql://139.224.146.23:3306/risk_db?useUnicode=true&characterEncoding=UTF-8&useSSL=false
+    username: libo
+    password: QxI^$pff92O$
+    maxActive: 500
+
+---
+spring:
+  profiles: sit
+ms:
+  db:
+    driverClassName: com.mysql.jdbc.Driver
+    url: jdbc:mysql://139.224.144.142:3306/frms-portal?useUnicode=true&characterEncoding=UTF-8&useSSL=false
     username: root
-    password:
+    password: bangsun_hx2017
+    maxActive: 500
+
+---
+spring:
+  profiles: pro
+ms:
+  db:
+    driverClassName: com.mysql.jdbc.Driver
+#    url: jdbc:mysql://rm-pz5g6eyzp5k9py89p.mysql.rds.aliyuncs.com:3306/frms-portal?useUnicode=true&characterEncoding=UTF-8
+#    username: riskdb
+#    password: 3YuyPS72
+#    maxActive: 500
+    url: jdbc:mysql://172.31.67.211:3306/risk_db?useUnicode=true&characterEncoding=UTF-8&useSSL=false
+    username: risk
+    password: QxI^$pff92O$
     maxActive: 500
