页面请求模块

--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,26 @@
         <druid.version>1.0.18</druid.version>
         <mybatis.version>3.2.8</mybatis.version>
         <mybatis-spring.version>1.2.2</mybatis-spring.version>
+        <kettle.version>4.4.0-stable</kettle.version>
     </properties>
+
+    <!--<repositories>-->
+        <!--<repository>-->
+            <!--<id>pentaho-releases</id>-->
+            <!--<url>http://repository.pentaho.org/artifactory/repo/</url>-->
+        <!--</repository>-->
+    <!--</repositories>-->
+    <repositories>
+        <repository>
+            <id>pentaho-kettle</id>
+            <name>pentaho-kettle</name>
+            <url>http://repository.pentaho.org/artifactory/repo/</url>
+            <layout>default</layout>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
 
     <dependencies>
         <!--springboot-->
@@ -176,6 +195,37 @@
             <artifactId>lombok</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.4</version>
+        </dependency>
+
+        <!--<dependency>-->
+            <!--<groupId>pentaho-kettle</groupId>-->
+            <!--<artifactId>kettle-core</artifactId>-->
+            <!--<version>${kettle.version}</version>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+            <!--<groupId>com.verhas</groupId>-->
+            <!--<artifactId>license3j</artifactId>-->
+            <!--<version>1.0.7 </version>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+            <!--<groupId>pentaho-kettle</groupId>-->
+            <!--<artifactId>kettle-dbdialog</artifactId>-->
+            <!--<version>${kettle.version}</version>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+            <!--<groupId>pentaho-kettle</groupId>-->
+            <!--<artifactId>kettle-engine</artifactId>-->
+            <!--<version>${kettle.version}</version>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+            <!--<groupId>pentaho</groupId>-->
+            <!--<artifactId>metastore</artifactId>-->
+            <!--<version>${kettle.version}</version>-->
+        <!--</dependency>-->
 
     </dependencies>
 
