--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -38,6 +38,9 @@ ms:
     username: libo
     password: QxI^$pff92O$
     maxActive: 500
+flow:
+  #生产 UAT-http://tgapiuat.homefax.cn/web/portal
+  shenyihao: http://139.224.144.178:9181/flow/syncAudit?processKey=flow21
 
 ---
 spring:
